--- a/css/main.css
+++ b/css/main.css
@@ -120,7 +120,7 @@
     flex-wrap: wrap;
 }
 
-@media screen and (max-width: 600px){
+@media only screen and (max-width: 600px){
     .container1{
         height: 500px;
         width: 100%;
@@ -173,5 +173,6 @@
         margin-right: 10px;
         margin-left: 0px;
     }
+    .header{width: 100;}
     
 }
