--- a/css/main.css
+++ b/css/main.css
@@ -166,13 +166,21 @@
         padding-left: 0px;
        
     }
-    .header-items ul{
-        margin-right: 10px;
-    }
+    
     .header img{
         margin-right: 10px;
         margin-left: 0px;
     }
-    .header{width: 100;}
+    .header{
+        width: 100;
+    }
+    .header-items ul li{
+        width: 75px;
+        float: left;
+        margin-left: 8px;
+        text-align: center;
+        font-size: 20px;
+    }
+   
     
 }
